--- a/Mario-Spinoff/Mario_Spinoff.html
+++ b/Mario-Spinoff/Mario_Spinoff.html
@@ -17,8 +17,7 @@
     var canvas = document.getElementById("myCanvas");
     var ctx = canvas.getContext("2d");
 
-    //ball
-    var ballRadius = 10;
+    // mario
     var x = canvas.width/2;
     var y = canvas.height-30;
     var dx = 2;
